--- a/catalog.html
+++ b/catalog.html
@@ -30,40 +30,55 @@
             <a class="cart-icon" href="#">Корзина</a>
           </li>
         </ul>
-
-        <div class="site-navigation-wrapper">
-          <ul class="site-navigation">
-            <li class="site-navigation-item">
-            <a class="site-navigation-link catalog" href="#">Каталог товаров</a>
+        <ul class="site-navigation">
+          <li>
+            <a href="#">Каталог товаров</a>
             <ul class="sub-menu">
-              <li><a class="catalog-link" href="#">Виртуальная реальность</a></li>
-              <li><a class="catalog-link" href="catalog.html">Моноподы для селфи</a></li>
-              <li><a class="catalog-link" href="#">Экшн-камеры</a></li>
-              <li><a class="catalog-link" href="#">Фитнес-браслеты</a></li>
-              <li><a class="catalog-link" href="#">Умные часы</a></li>
-              <li><a class="catalog-link" href="#">Квадрокоптеры</a></li>
+              <li>
+                <a href="#">Виртуальная реальность</a>
+              </li>
+              <li>
+                <a href="catalog.html">Моноподы для селфи</a>
+              </li>
+              <li>
+                <a href="#">Экшн-камеры</a>
+              </li>
+              <li>
+                <a href="#">Фитнес-браслеты</a>
+              </li>
+              <li>
+                <a href="#">Умные часы</a>
+              </li>
+              <li>
+                <a href="#">Квадрокоптеры</a>
+              </li>
             </ul>
-            </li>
-            <li class="site-navigation-item">
-                <a class="site-navigation-link" href="#">Доставка</a>
-            </li>
-            <li class="site-navigation-item">
-              <a class="site-navigation-link" href="#">Гарантия</a>
-            </li>
-            <li class="site-navigation-item">
-              <a class="site-navigation-link" href="#">Контакты</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+          </li>
+          <li>
+              <a href="#">Доставка</a>
+          </li>
+          <li>
+            <a href="#">Гарантия</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+        </nav>
     </header>
 
     <main class="container">
-      <h1>Моноподы для селфи</h1>
+      <h2>Моноподы для селфи</h2>
       <ul class="breadcrumbs">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Каталог товаров</a></li>
-        <li class="breadcrumbs-current"><a>Моноподы для селфи</a></li>
+        <li>
+          <a href="index.html">Главная</a>
+        </li>
+        <li>
+          <a href="catalog.html">Каталог товаров</a>
+        </li>
+        <li class="breadcrumbs-current">
+          <a>Моноподы для селфи</a>
+        </li>
       </ul>
       <section class="filters">
         <h2 class="visually-hidden">Фильтр товаров</h2>
@@ -94,34 +109,66 @@
       <section class="catalog">
         <h2 class="visually-hidden">Список моноподов</h2>
         <ul class="catalog-list">
-          <li class="catalog-item">
-            <h3>
+
+          <ul class="catalog-list">
+            <li>
+              <h3 class="visually-hidden">Товар: Любительская селфи-палка</h3>
+              <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+            </li>
+            <li>
               <a href="#">Любительская селфи-палка</a>
-            </h3>
-            <span class="price">500 руб.</span>
-            <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-          </li>
-          <li class="catalog-item">
-            <h3>
+              <p class="price">500 руб.</p>
+            </li>
+            <li>
+              <a class="button "href="#">В корзину</a>
+              <a href="#">Добавить к сравнению</a>
+            </li>
+          </ul>
+
+          <ul class="catalog-list">
+            <li>
+              <h3 class="visually-hidden">Товар: Профессиональная селфи-палка</h3>
+              <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+            </li>
+            <li>
               <a href="#">Профессиональная селфи-палка</a>
-            </h3>
-            <span class="price">1500 руб.</span>
-            <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-          </li>
-          <li class="catalog-item">
-            <h3>
+              <p class="price">1500 руб.</p>
+            </li>
+            <li>
+              <a class="button "href="#">В корзину</a>
+              <a href="#">Добавить к сравнению</a>
+            </li>
+          </ul>
+
+          <ul class="catalog-list">
+            <li>
+              <h3 class="visually-hidden">Товар: Непотопляемая селфи-палка</h3>
+              <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+            </li>
+            <li>
               <a href="#">Непотопляемая селфи-палка</a>
-            </h3>
-            <span class="price">2500 руб.</span>
-            <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-          </li>
-          <li class="catalog-item">
-            <h3>
+              <p class="price">2500 руб.</p>
+            </li>
+            <li>
+              <a class="button "href="#">В корзину</a>
+              <a href="#">Добавить к сравнению</a>
+            </li>
+          </ul>
+
+          <ul class="catalog-list">
+            <li>
+              <h3 class="visually-hidden">Товар: Селфи-палка «Следуй за мной»</h3>
+              <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+            </li>
+            <li>
               <a href="#">Селфи-палка «Следуй за мной»</a>
-            </h3>
-            <span class="price">500 руб.</span>
-            <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-          </li>
+              <p class="price">4900 руб.</p>
+            </li>
+            <li>
+              <a class="button "href="#">В корзину</a>
+              <a href="#">Добавить к сравнению</a>
+            </li>
+          </ul>
         </ul>
       </section>
     </main>
@@ -146,25 +193,23 @@
           </li>
         </ul>
 
-        <ul class="site-navigation">
-          <li class="site-navigation-item">
-              <a class="site-navigation-link" href="#">Доставка</a>
+        <ul class="site-navigation site-navigation-footer">
+          <li>
+            <a href="#">Доставка</a>
           </li>
-          <li class="site-navigation-item">
-              <a class="site-navigation-link" href="#">Гарантия</a>
+          <li>
+            <a href="#">Гарантия</a>
           </li>
-          <li class="site-navigation-item">
-              <a class="site-navigation-link" href="#">Контакты</a>
+          <li>
+            <a href="#">Контакты</a>
           </li>
         </ul>
       </nav>
-      <div class="footer-social">
-        <ul class="social-network-list">
-          <li><a class="social-button social-button-fb" href="#"><span class="visually-hidden">Facebook</span></a></li>
-          <li><a class="social-button social-button-inst" href="#"><span class="visually-hidden">Instagram</span></a></li>
-          <li><a class="social-button social-button-tw" href="#"><span class="visually-hidden">Twitter</span></a></li>
-        </ul>
-      </div>
+      <ul class="social-network-list">
+        <li><a class="social-button social-button-fb" href="#"><span class="visually-hidden">Facebook</span></a></li>
+        <li><a class="social-button social-button-inst" href="#"><span class="visually-hidden">Instagram</span></a></li>
+        <li><a class="social-button social-button-tw" href="#"><span class="visually-hidden">Twitter</span></a></li>
+      </ul>
       <p class="telephone">Тел.: +7 (495) 495-95-95</p>
       <a class="html-academy-logo" href="https://htmlacademy.ru/">
         <img src="img/html-academy-logo.svg" width="27" height="35" alt="Интернет-магазин гаджетов Device">
