Исправления + tentative сетка (только index.html)

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
           <a class="logo-icon">
             <img src="img/logo-icon.svg" width="164" height="35" alt="Интернет-магазин гаджетов Device">
           </a>
-            <div class="user-interface">
-              <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-                <label class="visually-hidden" for="search">Поиск по сайту</label>
-                <input class="search-line" type="search" name="search" placeholder="Поиск по сайту" id="search">
-              </form>
-              <ul class="user-navigation">
-                <li class="account">
-                  <a class="account-icon" href="#">Войти</a>
-                </li>
-                <li class="compare">
-                  <a class="compare-icon" href="#">Сравнить</a>
-                </li>
-                <li class="cart">
-                  <a class="cart-icon" href="#">Корзина</a>
-                </li>
-              </ul>
-            </div>
+          <div class="user-interface">
+            <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+              <label class="visually-hidden" for="search">Поиск по сайту</label>
+              <input class="search-line" type="search" name="search" placeholder="Поиск по сайту" id="search">
+            </form>
+            <ul class="user-navigation">
+              <li class="account">
+                <a class="account-icon" href="#">Войти</a>
+              </li>
+              <li class="compare">
+                <a class="compare-icon" href="#">Сравнить</a>
+              </li>
+              <li class="cart">
+                <a class="cart-icon" href="#">Корзина</a>
+              </li>
+            </ul>
+          </div>
           <ul class="site-navigation">
             <li class="site-navigation-catalog">
               <a class="catalog" href="#">Каталог товаров</a>
@@ -78,92 +78,93 @@
         <h1 class="visually-hidden">Интернет магазин Device</h1>
         <section class="popular">
           <h2 class="visually-hidden">Популярные предложения</h2>
-          <div class="slide">
-            <span class="slide-number">01</span>
-            <a href="#">
-              <img src="img/slider-1.png" width="384" height="486" alt="Восьмиметровая селфи-палка">
-            </a>
-            <b>Делай селфи, как Бен Стилер!</b>
-            <p>
-              Самая длинная палка для селфи доступна в нашем магазине. <br>
-              Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
-            </p>
-            <table>
-              <tr>
-                <td>Длина палки</td>
-                <td>Вес палки</td>
-                <td>Материал</td>
-              </tr>
-              <tr>
-                <td>8,5 м</td>
-                <td>5 кг</td>
-                <td>Карбон</td>
-              </tr>
-              <a class="button" href="#">Подробнее</a>
-            </table>
-          </div>
-          <div class="slide">
-            <span class="slide-number">02</span>
-            <a href="#">
-              <img src="img/slider-2.png" width="345" height="485" alt="Мотивирующие фитнес-браслеты">
-            </a>
-            <b>Худеем правильно!</b>
-            <p>
-              Мотивирующие фитнес-браслеты помогут найти в себе силы <br>
-              не пропускать занятия и соблюдать диету.
-            </p>
-            <table>
-              <tr>
-                <td>Без подзарядки</td>
-              </tr>
-              <tr>
-                <td>48 часов</td>
-              </tr>
-              <a class="button" href="#">Подробнее</a>
-            </table>
-          </div>
-          <div class="slide">
-            <span class="slide-number">03</span>
-            <a href="#">
-              <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер с мощным лазером">
-            </a>
-            <b>Порхает как бабочка, <br>
-                жалит как пчела!</b>
-            <p>
-              Этот обычный, на первый взгляд, квадрокоптер оснащен <br>
-              мощным лазером, замаскированным под стандартную камеру.
-            </p>
-            <table>
-              <tr>
-                <td>Дальность полёта</td>
-                <td>Радиус поражения</td>
-              </tr>
-              <tr>
-                <td>800 м</td>
-                <td>50 м</td>
-              </tr>
-              <a class="button" href="#">Подробнее</a>
-            </table>
-          </div>
-          <ul class="slide-switches">
-            <li class="slide-radio">
+          <ul class="slider-list-popular">
+            <li class="slide-popular">
+              <span class="slide-number">01</span>
+              <a href="#">
+                <img src="img/slider-1.png" width="384" height="486" alt="Восьмиметровая селфи-палка">
+              </a>
+              <b>Делай селфи, как Бен Стилер!</b>
+              <p>
+                Самая длинная палка для селфи доступна в нашем магазине. <br>
+                Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+              </p>
+              <table>
+                <tr>
+                  <td>Длина палки</td>
+                  <td>Вес палки</td>
+                  <td>Материал</td>
+                </tr>
+                <tr>
+                  <td>8,5 м</td>
+                  <td>5 кг</td>
+                  <td>Карбон</td>
+                </tr>
+                <a class="button" href="#">Подробнее</a>
+              </table>
+            </li>
+            <li class="slide-popular">
+              <span class="slide-number">02</span>
+              <a href="#">
+                <img src="img/slider-2.png" width="345" height="485" alt="Мотивирующие фитнес-браслеты">
+              </a>
+              <b>Худеем правильно!</b>
+              <p>
+                Мотивирующие фитнес-браслеты помогут найти в себе силы <br>
+                не пропускать занятия и соблюдать диету.
+              </p>
+              <table>
+                <tr>
+                  <td>Без подзарядки</td>
+                </tr>
+                <tr>
+                  <td>48 часов</td>
+                </tr>
+                <a class="button" href="#">Подробнее</a>
+              </table>
+            </li>
+            <li class="slide-popular">
+              <span class="slide-number">03</span>
+              <a href="#">
+                <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер с мощным лазером">
+              </a>
+              <b>Порхает как бабочка, <br>
+                  жалит как пчела!</b>
+              <p>
+                Этот обычный, на первый взгляд, квадрокоптер оснащен <br>
+                мощным лазером, замаскированным под стандартную камеру.
+              </p>
+              <table>
+                <tr>
+                  <td>Дальность полёта</td>
+                  <td>Радиус поражения</td>
+                </tr>
+                <tr>
+                  <td>800 м</td>
+                  <td>50 м</td>
+                </tr>
+                <a class="button" href="#">Подробнее</a>
+              </table>
+            </li>
+          </ul>
+          <ul class="slide-switches-popular">
+            <li class="slider-radio">
               <button class="slider" type="button" name="button">
                 <span class="visually-hidden">Первый слайд</span>
               </button>
             </li>
-            <li>
+            <li class="slider-radio">
               <button class="slider" type="button" name="button">
                 <span class="visually-hidden">Второй слайд</span>
               </button>
             </li>
-            <li>
+            <li class="slider-radio">
               <button class="slider" type="button" name="button">
                 <span class="visually-hidden">Третий слайд</span>
               </button>
             </li>
           </ul>
         </section>
-
         <section class="categories">
           <h2 class="visually-hidden">Популярные категории товаров</h2>
           <ul class="categories-list">
@@ -187,7 +188,37 @@
             </li>
           </ul>
         </section>
-        <section class="services"></section>
+        <section class="services">
+          <h2 class="visually-hidden">Наши услуги</h2>
+          <ul class="slider-list-services">
+            <li class="slide-services delivery">
+              <h3>Доставка</h3>
+              <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+            </li>
+            <li class="slide-services warranty">
+              <h3>Гарантия</h3>
+              <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.
+              Товар, не дом, конечно же.</p>
+            </li>
+            <li class="slide-services credit">
+              <h3>Кредит</h3>
+              <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные
+              условия кредита. Выгодные для нашего банка, разумеется.</p>
+            </li>
+
+          </ul>
+          <ul class="slider-switches-services">
+            <li class="slider-button">
+              <button class="button" type="button" name="button">Доставка</button>
+            </li>
+            <li class="slider-button">
+              <button class="button" type="button" name="button">Гарантия</button>
+            </li>
+            <li class="slider-button">
+              <button class="button" type="button" name="button">Кредит</button>
+            </li>
+          </ul>
+        </section>
         <section class="brands">
           <h2 class="visually-hidden">Бренды, с которыми мы сотрудничаем</h2>
           <ul class="brands-list">
@@ -213,65 +244,73 @@
             </li>
           </ul>
         </section>
-        <section class="info">
-          <h2 class="header-with-bar">О нас</h2>
-          <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-          <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
-          <ul class="partners">
-            <li class="partners-item">Деловые Линии</li>
-            <li class="partners-item">Автотрейдинг</li>
-            <li class="partners-item">ЖелДорЭкспедиция</li>
-          </ul>
-          <a class="button" href="#">Подробнее о нас</a>
-        </section>
-        <section class="contacts">
-          <h2 class="header-with-bar">Контакты</h2>
-          <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-          <p><a class="index-map" href="#"><img src="img/index-map.jpg" width="560" height="222" alt="Карта"></a></p>
-          <a class="button" href="#">Напишите нам</a>
-        </section>
+        <div class="section-wrapper">
+          <section class="info">
+            <h2 class="header-with-bar">О нас</h2>
+            <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+            <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+            <ul class="partners">
+              <li class="partners-item">Деловые Линии</li>
+              <li class="partners-item">Автотрейдинг</li>
+              <li class="partners-item">ЖелДорЭкспедиция</li>
+            </ul>
+            <a class="button" href="#">Подробнее о нас</a>
+          </section>
+          <section class="contacts">
+            <h2 class="header-with-bar">Контакты</h2>
+            <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+            <p><a class="index-map" href="#"><img src="img/index-map.jpg" width="560" height="222" alt="Карта"></a></p>
+            <a class="button" href="#">Напишите нам</a>
+          </section>
+        </div>
       </main>
-      <footer class="main-footer">
-        <a class="logo-icon">
-          <img src="img/logo-icon-footer.svg" width="164" height="35" alt="Интернет-магазин гаджетов Device">
-        </a>
-        <p class="adress">г. Москва, ул. Строителей, 15</p>
-
-        <nav class="footer-navigation">
-          <ul class="user-navigation-footer">
-            <li class="account">
-              <a class="account-icon-footer" href="#">Войти</a>
-            </li>
-            <li class="compare">
-              <a class="compare-icon-footer" href="#">Сравнить</a>
-            </li>
-            <li class="cart">
-              <a class="cart-icon-footer" href="#">Корзина</a>
-            </li>
-          </ul>
-
-          <ul class="site-navigation site-navigation-footer">
-            <li>
-              <a href="#">Доставка</a>
-            </li>
-            <li>
-              <a href="#">Гарантия</a>
-            </li>
-            <li>
-              <a href="#">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="social-network-list">
-          <li><a class="social-button social-button-fb" href="#"><span class="visually-hidden">Facebook</span></a></li>
-          <li><a class="social-button social-button-inst" href="#"><span class="visually-hidden">Instagram</span></a></li>
-          <li><a class="social-button social-button-tw" href="#"><span class="visually-hidden">Twitter</span></a></li>
-        </ul>
-        <p class="telephone">Тел.: +7 (495) 495-95-95</p>
-        <a class="html-academy-logo" href="https://htmlacademy.ru/">
-          <img src="img/html-academy-logo.svg" width="27" height="35" alt="Интернет-магазин гаджетов Device">
-        </a>
+    </div>
+    <footer class="main-footer">
+        <div class="container container-footer">
+          <div class="footer-left">
+            <a class="logo-icon">
+              <img src="img/logo-icon-footer.svg" width="164" height="35" alt="Интернет-магазин гаджетов Device">
+            </a>
+            <p class="adress">г. Москва, ул. Строителей, 15</p>
+          </div>
+          <div class="footer-mid">
+            <ul class="site-navigation site-navigation-footer">
+                <li>
+                  <a href="#">Доставка</a>
+                </li>
+                <li>
+                  <a href="#">Гарантия</a>
+                </li>
+                <li>
+                  <a href="#">Контакты</a>
+                </li>
+              </ul>
+            <ul class="social-network-list">
+              <li><a class="social-button social-button-fb" href="#"><span class="visually-hidden">Facebook</span></a></li>
+              <li><a class="social-button social-button-inst" href="#"><span class="visually-hidden">Instagram</span></a></li>
+              <li><a class="social-button social-button-tw" href="#"><span class="visually-hidden">Twitter</span></a></li>
+            </ul>
+          </div>
+          <div class="footer-right">
+            <ul class="user-navigation-footer">
+              <li class="account">
+                <a class="account-icon-footer" href="#">Войти</a>
+              </li>
+              <li class="compare">
+                <a class="compare-icon-footer" href="#">Сравнить</a>
+              </li>
+              <li class="cart">
+                <a class="cart-icon-footer" href="#">Корзина</a>
+              </li>
+            </ul>
+            <p class="telephone">Тел.: +7 (495) 495-95-95</p>
+            <a class="html-academy-logo" href="https://htmlacademy.ru/">
+              <img src="img/html-academy-logo.svg" width="27" height="35" alt="Интернет-магазин гаджетов Device">
+            </a>
+          </div>
+        </div>
       </footer>
+    <div class="container">
       <section class="modal-feedback">
         <h2 class="visually-hidden">Обратная связь</h2>
         <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
@@ -287,7 +326,6 @@
             <label for="comment">Текст письма:</label>
             <textarea name="comment" rows="8" cols="80" id="comment" placeholder="В свободной форме"></textarea>
           </p>
-
           <button class="button" type="submit">Отправить</button>
         </form>
         <button class="modal-close" type="button" name="button">
